samples/_failures_safe/1760961768_843701_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d473fe3c.c: In function ‘main’:
./samples/SAFE/__tmp_d473fe3c.c:185:20: error: missing terminating " character
  185 |             printf("Invalid choice. Please try again
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d473fe3c.c:185:13: error: expected expression at end of input
  185 |             printf("Invalid choice. Please try again
      |             ^~~~~~
./samples/SAFE/__tmp_d473fe3c.c:185:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d473fe3c.c:185:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d473fe3c.c:185:13: error: expected declaration or statement at end of input
